--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "sqlite3": "^5.0.0"
   },
   "scripts": {
-    "start": "node client/scripts/start.js",
+    "start": "node client/scripts/build.js && node server/bin/www",
     "build": "node client/scripts/build.js",
     "test": "node client/scripts/test.js"
   },
