--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cookie-parser": "~1.4.4",
     "css-loader": "3.4.2",
+    "debug": "~2.6.9",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -28,15 +30,18 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "express": "~4.16.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
+    "ip": "^1.1.5",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "morgan": "~1.9.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -50,9 +55,11 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "sqlite": "^4.0.14",
+    "sqlite3": "^5.0.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
@@ -60,19 +67,11 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "sqlite": "^4.0.14",
-    "sqlite3": "^5.0.0"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node client/scripts/build.js && node server/bin/www",
-    "build": "node client/scripts/build.js",
+    "start": "node client/scripts/build.js && node server/app.js",
+    "build": "node client/scripts/build.js && pkg ./build.config.json --out-dir build/",
     "test": "node client/scripts/test.js"
   },
   "proxy": "http://localhost:3001",
