--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,43 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Cards Against COVID",
+  "short_name": "Cards",
+  "description": "A party game for quarantined people",
+  "lang": "en-US",
+  "dir": "ltr",
+  "categories": ["games"],
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "sizes": "48x48 32x32 16x16"
     },
     {
-      "src": "logo192.png",
+      "src": "favicon_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "favicon_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "shortcuts" : [
+    {
+      "name": "Start New Game",
+      "url": "/start"
+    },
+    {
+      "name": "Join Existing Game",
+      "url": "/join"
+    },
+    {
+      "name": "Create Expansion Pack",
+      "url": "/expansions"
+    }
+  ]
 }
