--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "semver": "6.3.0",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
+    "stoppable": "^1.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
     "ts-pnp": "1.1.6",
