--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
     "stoppable": "^1.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
