--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 **/.DS_Store
 **/node_modules
 **/build
+
+client/coverage
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+
+server/cards/custom-cards.json
