--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "^3.1.2",
