--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^5.2.0",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
