--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.3.1",
     "cookie-parser": "~1.4.4",
     "css-loader": "3.4.2",
     "debug": "~2.6.9",
