--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
