(WIP) Rewrite using fewer libraries - Use typescript for the server - Remove redux, express, and socket.io - Add ws/websocket

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 **/.DS_Store
 **/node_modules
 **/build
+**/dist
+workspace.code-workspace
 
-dist
 cards-against-covid-server/cards/custom-cards.json
