--- a/cards-against-covid-client/.eslintrc.json
+++ b/cards-against-covid-client/.eslintrc.json
@@ -1,15 +1,34 @@
 {
-    "env": {
-        "browser": true
+    "root": true,
+    "extends": "airbnb",
+    "env": { "browser": true, "es6": true },
+    "parserOptions": {
+        "ecmaFeatures": { "jsx": true },
+        "ecmaVersion": 2020
     },
     "rules": {
+        "indent": ["warn", 4, { "SwitchCase": 1 }],
+        "quotes": ["error", "double"],
+        "max-len": ["warn", {
+            "code": 100,
+            "ignoreUrls": true,
+            "ignoreComments": false,
+            "ignoreRegExpLiterals": true,
+            "ignoreStrings": true,
+            "ignoreTemplateLiterals": true
+        }],
+        "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
+        "no-param-reassign": ["error", { "props": false }],
+        "no-plusplus": "off",
+        "object-curly-newline": ["error", { "multiline": true }],
+        
         "react/jsx-props-no-spreading": "off",
         "react/prop-types": "off",
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": ["error", 4],
-        "jsx-a11y/label-has-associated-control": [ 2, {
+        "jsx-a11y/label-has-associated-control": ["error", {
             "controlComponents": ["TextBox"],
             "depth": 2
-          }]      
+        }]
     }
 }
