--- a/cards-against-covid-server/package.json
+++ b/cards-against-covid-server/package.json
@@ -2,20 +2,18 @@
   "name": "cards-against-covid-server",
   "version": "0.2.0",
   "private": true,
-  "bin": "app.js",
+  "main": "dist/index.js",
+  "type": "commonjs",
+  "types": "./dist/index.d.ts",
+  "bin": "dist/index.js",
   "dependencies": {
     "chalk": "^4.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0",
     "ip": "^1.1.5",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.1.2",
-    "stoppable": "^1.1.0"
+    "ws": "^7.5.0"
   },
   "scripts": {
-    "start": "node app.js --dev",
-    "build": "pkg . --output ../build/Cards-Against-COVID --targets node14-linux-x64,node14-macos-x64,node14-win-x64"
+    "start": "tsc && node dist/index.js --dev",
+    "build": "tsc && pkg . --output ../build/Cards-Against-COVID --targets node14-linux-x64,node14-macos-x64,node14-win-x64"
   },
   "pkg": {
     "assets": [
@@ -23,6 +21,18 @@
     ]
   },
   "devDependencies": {
-    "pkg": "^5.2.1"
+    "@tsconfig/node14": "^1.0.1",
+    "@types/ip": "^1.1.0",
+    "@types/node": "^15.12.4",
+    "@types/ws": "^7.4.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "pkg": "^5.3.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
