Convert client to typescript

--- a/cards-against-covid-client/package.json
+++ b/cards-against-covid-client/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.2",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
-    "eslint-config-airbnb": "^18.2.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
@@ -16,13 +20,17 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.5",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-css": "npx stylelint \"src/**/*.css\"",
+    "lint-ts": "npx eslint .",
+    "lint": "npm run lint-css && npm run lint-ts"
   },
   "browserslist": {
     "production": [
@@ -37,6 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-plugin-react": "^7.25.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0"
   }
