--- a/cards-against-covid-client/package.json
+++ b/cards-against-covid-client/package.json
@@ -6,17 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.2",
-    "@types/react": "^17.0.21",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.6",
+    "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.5",
@@ -28,9 +28,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint-css": "npx stylelint \"src/**/*.css\"",
-    "lint-ts": "npx eslint .",
+    "lint-css": "stylelint \"src/**/*.css\"",
+    "lint-ts": "eslint src",
     "lint": "npm run lint-css && npm run lint-ts"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0"
   },
   "browserslist": {
     "production": [
@@ -43,15 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-plugin-react": "^7.25.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0"
   }
 }
