--- a/cards-against-covid-server/package.json
+++ b/cards-against-covid-server/package.json
@@ -3,36 +3,33 @@
   "version": "0.2.0",
   "private": true,
   "main": "dist/index.js",
-  "type": "commonjs",
-  "types": "./dist/index.d.ts",
-  "bin": "dist/index.js",
+
   "dependencies": {
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "ip": "^1.1.5",
-    "ws": "^7.5.0"
+    "ws": "^7.5.5"
   },
   "scripts": {
     "start": "tsc && node dist/index.js --dev",
-    "build": "tsc"
-  },
-  "pkg": {
-    "assets": [
-      "../cards-against-covid-client/build/**/*"
-    ]
+    "build": "tsc",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.1",
     "@types/ip": "^1.1.0",
-    "@types/node": "^15.12.4",
-    "@types/ws": "^7.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.23.4",
-    "pkg": "^5.3.0",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4"
+    "@types/node": "^15.14.9",
+    "@types/ws": "^7.4.7",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "pkg": "^5.3.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
+  },
+  "bin": "dist/index.js",
+  "pkg": {
+    "assets": [
+      "../cards-against-covid-client/build/**/*"
+    ]
   }
 }
